--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,12 +9,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: build
-        run: yarn install && yarn package
+        run: yarn install && yarn lint 
         env: 
           CI: true
-      - name: publish
-        run:  yarn global add vsce && vsce  login ${{ secrets.PUBLISH_NAME }}
+      - name: test
+        run:  yarn test
         env: 
           CI: true
-      - name: inputpwd
-        run:  echo '${{ secrets.PUBLISH_NAME }}'
