--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
 		"test-compile": "tsc -p ./",
 		"test-watch": "tsc -watch -p ./",
 		"pretest": "yarn run test-compile && yarn run lint",
-		"lint": "eslint src --ext ts",
+		"lint": "eslint src --ext ts --fix",
 		"test": "node ./out/test/runTest.js",
 		"release": "standard-version",
 		"publish": "vsce package"
