--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,3 +12,7 @@ jobs:
         run: yarn install && yarn lint 
         env: 
           CI: true
+      - uses: getsentry/action-git-diff-suggestions@main
+        with:
+          message: eslint
+      
